# business_agent_system

./: .coveragerc  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  business-agent-system.code-workspace  demo_enhanced_accounting.py  docker-compose.yml  exceptions.py  flake.nix  main.py  pyproject.toml  requirements.txt  run_dashboard.py  run_unit_tests.py  shell.nix
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci-incremental.yml  ci-legacy.yml  ci.yml  performance.yml  web-tests.yml
agents/: CLAUDE.md  __init__.py  accounting_agent.py  accounting_agent_enhanced.py  base_agent.py  hr_agent.py  inventory_agent.py  inventory_agent_enhanced.py
config/: restaurant_config.yaml  restaurant_fast_test.yaml  retail_config.yaml
dashboard/: app.py
deployment/: CLAUDE.md
docs/: CI-CD-GUIDE.md  IDE_SETUP.md  PRE_COMMIT_AUTO_FIXES.md
integrations/: CLAUDE.md
models/: CLAUDE.md  __init__.py  agent_decisions.py  employee.py  financial.py  inventory.py
scripts/: README.md  quality-gate.py  setup-branch-protection.sh  setup-ide.py  test-discovery.py  test-validation.py  validate-env.py  validate-file.py  watch-validate.py
simulation/: CLAUDE.md  __init__.py  business_simulator.py  financial_generator.py  inventory_simulator.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_dashboard_smoke.py  test_dashboard_web.py  web_test_utils.py
tests/integration/: README.md  __init__.py  conftest.py  pytest.ini  test_agent_coordination.py  test_business_simulation.py  test_database_operations.py  test_end_to_end_workflows.py  test_error_scenarios.py  test_runner.py  test_system_initialization.py
tests/performance/: README.md  __init__.py  benchmark_utils.py  conftest.py  performance_runner.py  test_agent_performance.py  test_dashboard_performance.py  test_database_performance.py  test_simulation_performance.py  test_stress.py
tests/unit/: README.md  __init__.py  conftest.py  test_accounting_agent.py  test_accounting_agent_enhanced_coverage.py  test_accounting_agent_enhanced_missing_coverage.py  test_agent_decisions.py  test_base_agent.py  test_business_simulator.py  test_demo_enhanced_accounting.py  test_enhanced_accounting_agent.py  test_enhanced_inventory_agent.py  test_exceptions.py  test_financial_generator.py  test_hr_agent.py  test_inventory_agent.py  test_inventory_agent_advanced.py  test_inventory_agent_advanced_coverage.py  test_inventory_agent_enhanced.py  test_inventory_agent_enhanced_additional_coverage.py  test_inventory_agent_enhanced_final_coverage.py  test_inventory_agent_enhanced_missing_coverage.py  test_inventory_agent_missing_coverage.py  test_inventory_agent_specific_coverage.py  test_inventory_simulator.py  test_main.py  test_runner.py  test_utils_error_handlers.py  test_utils_exceptions.py  test_utils_logging_config.py  test_utils_retry.py
utils/: __init__.py  error_handlers.py  exceptions.py  logging_config.py  retry.py
